<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="templeofmaat.judgment.EditReviewActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >
    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin" >
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/_name"
                style="@style/EditText"
                android:inputType="textCapWords"
                android:maxLength="75"
                android:hint="@string/review_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Space
        android:layout_width="20dp"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <RatingBar
            android:id="@+id/stars"
            android:theme="@style/RatingBar"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_vertical_margin" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/review"
            style="@style/EditText"
            android:hint="@string/review_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:gravity="top|start"
            android:minLines="4"
            android:maxLines="8" />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="20dp"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/DarkButton" />
        <Space
            android:layout_width="80dp"
            android:layout_height="10dp" />
        <Button
            android:id="@+id/deleteButton"
            android:text="@string/category_delete"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/DarkButton" />
    </LinearLayout>


</LinearLayout>